.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
02:27:20 **** Incremental Build of configuration Debug for project CLASE3 EJERCICIO2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\CLASE3 EJERCICIO2.o" "..\\src\\CLASE3 EJERCICIO2.c" 
..\src\CLASE3 EJERCICIO2.c: In function 'main':
..\src\CLASE3 EJERCICIO2.c:33:14: error: too few arguments to function 'circulo'
   33 |  resultado = circulo(radio);
      |              ^~~~~~~
..\src\CLASE3 EJERCICIO2.c:20:7: note: declared here
   20 | float circulo(float area, float perimetro); // Prototipo
      |       ^~~~~~~
02:28:34 **** Incremental Build of configuration Debug for project CLASE3 EJERCICIO2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\CLASE3 EJERCICIO2.o" "..\\src\\CLASE3 EJERCICIO2.c" 
..\src\CLASE3 EJERCICIO2.c: In function 'main':
..\src\CLASE3 EJERCICIO2.c:33:14: error: too few arguments to function 'circulo'
   33 |  resultado = circulo(radio);
      |              ^~~~~~~
..\src\CLASE3 EJERCICIO2.c:20:7: note: declared here
   20 | float circulo(float area, float perimetro); // Prototipo
      |       ^~~~~~~
02:28:35 **** Incremental Build of configuration Debug for project CLASE3 EJERCICIO2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\CLASE3 EJERCICIO2.o" "..\\src\\CLASE3 EJERCICIO2.c" 
..\src\CLASE3 EJERCICIO2.c: In function 'main':
..\src\CLASE3 EJERCICIO2.c:33:14: error: too few arguments to function 'circulo'
   33 |  resultado = circulo(radio);
      |              ^~~~~~~
..\src\CLASE3 EJERCICIO2.c:20:7: note: declared here
   20 | float circulo(float area, float perimetro); // Prototipo
      |       ^~~~~~~
02:31:56 **** Incremental Build of configuration Debug for project CLASE3 EJERCICIO2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\CLASE3 EJERCICIO2.o" "..\\src\\CLASE3 EJERCICIO2.c" 
..\src\CLASE3 EJERCICIO2.c: In function 'main':
..\src\CLASE3 EJERCICIO2.c:33:14: error: too few arguments to function 'circulo'
   33 |  resultado = circulo(PI*radio*radio);
      |              ^~~~~~~
..\src\CLASE3 EJERCICIO2.c:20:7: note: declared here
   20 | float circulo(float area, float perimetro); // Prototipo
      |       ^~~~~~~
02:33:25 **** Incremental Build of configuration Debug for project CLASE3 EJERCICIO2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\CLASE3 EJERCICIO2.o" "..\\src\\CLASE3 EJERCICIO2.c" 
..\src\CLASE3 EJERCICIO2.c: In function 'main':
..\src\CLASE3 EJERCICIO2.c:33:14: error: too few arguments to function 'circulo'
   33 |  resultado = circulo(PI*radio*radio);
      |              ^~~~~~~
..\src\CLASE3 EJERCICIO2.c:20:7: note: declared here
   20 | float circulo(float area, float perimetro); // Prototipo
      |       ^~~~~~~
02:33:53 **** Incremental Build of configuration Debug for project CLASE3 EJERCICIO2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\CLASE3 EJERCICIO2.o" "..\\src\\CLASE3 EJERCICIO2.c" 
..\src\CLASE3 EJERCICIO2.c: In function 'main':
..\src\CLASE3 EJERCICIO2.c:33:14: error: too few arguments to function 'circulo'
   33 |  resultado = circulo(PI*radio*radio);
      |              ^~~~~~~
..\src\CLASE3 EJERCICIO2.c:20:5: note: declared here
   20 | int circulo(float area, float perimetro); // Prototipo
      |     ^~~~~~~
02:37:29 **** Incremental Build of configuration Debug for project CLASE3 EJERCICIO2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\CLASE3 EJERCICIO2.o" "..\\src\\CLASE3 EJERCICIO2.c" 
gcc -o "CLASE3 EJERCICIO2.exe" "src\\CLASE3 EJERCICIO2.o" 
Info: Nothing to build for CLASE3 EJERCICIO2
02:38:59 **** Incremental Build of configuration Debug for project CLASE3 EJERCICIO2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\CLASE3 EJERCICIO2.o" "..\\src\\CLASE3 EJERCICIO2.c" 
gcc -o "CLASE3 EJERCICIO2.exe" "src\\CLASE3 EJERCICIO2.o" 
Info: Nothing to build for CLASE3 EJERCICIO2
02:40:11 **** Incremental Build of configuration Debug for project CLASE3 EJERCICIO2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\CLASE3 EJERCICIO2.o" "..\\src\\CLASE3 EJERCICIO2.c" 
gcc -o "CLASE3 EJERCICIO2.exe" "src\\CLASE3 EJERCICIO2.o" 
